# OneLife

./: CMakeLists.txt  mingw-toolchain.cmake
gameSource/: CMakeLists.txt
gameSource/cmake/: client.cmake  editor.cmake
server/: CMakeLists.txt
